--- a/good_night.html
+++ b/good_night.html
@@ -47,7 +47,17 @@ body{
 
 <body>
 
-<audio autoplay src="jaz1.mp3"></audio>
+<!-- Musik -->
+  <audio id="bg-music" loop>
+    <source src="music/love-song.mp3" type="audio/mpeg">
+    Browser kamu tidak mendukung audio.
+  </audio>
+
+  <!-- Tombol Play / Mute -->
+  <button id="music-btn"
+    style="position:fixed; bottom:20px; right:20px; padding:10px 15px; border:none; border-radius:10px; background:#ff69b4; color:#fff; font-size:16px; cursor:pointer; z-index:999;">
+    🎵 Play
+  </button>
 
 <div id="container"></div>
 
@@ -168,6 +178,21 @@ createLove();
   		});
   	});
 </script>
+<script>
+  const music = document.getElementById("bg-music");
+  const btn = document.getElementById("music-btn");
+
+  btn.addEventListener("click", () => {
+    if (music.paused) {
+      music.play();
+      btn.textContent = "🔇 Mute";
+    } else {
+      music.pause();
+      btn.textContent = "🎵 Play";
+    }
+  });
+</script>
+
 
 </body>
 </html>
