--- a/good_night.html
+++ b/good_night.html
@@ -49,7 +49,7 @@ body{
 
 <!-- Musik -->
   <audio id="bg-music" loop>
-    <source src="music/love-song.mp3" type="audio/mpeg">
+    <source src="jaz1.mp3" type="audio/mpeg">
     Browser kamu tidak mendukung audio.
   </audio>
 
